components/policies/best-practices/ban-default-namespace/binding.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ban-default-namespace
  labels:
    app.kubernetes.io/name: ban-default-namespace
    app.kubernetes.io/component: best-practices
spec:
  policyName: ban-default-namespace
  validationActions: [Deny]
